--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,34 @@
+:root {
+  --twitterBlue: #1d9bf0;
+}
+
+@font-face {
+  font-family: MontHeavy;
+  src: url("../public/Mont-Heavy.otf") format("opentype");
+}
+
+/* .montHeavy {
+  
+} */
+
+h1 {
+  color: #fff;
+  font-family: "MontHeavy";
+  font-size: 6rem;
+}
+
+h2 {
+  color: #fff;
+  font-family: "MontHeavy";
+  font-size: 2rem;
+}
+
+h3 {
+  color: #fff;
+  font-family: "MontHeavy";
+  font-size: 1rem;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
