trends column ok

--- a/styles/Homecomponent.module.css
+++ b/styles/Homecomponent.module.css
@@ -22,11 +22,13 @@
   height: 100%;
   border-left: 1px solid rgb(77, 77, 77);
   border-right: 1px solid rgb(77, 77, 77);
+  padding: 2rem;
 }
 
 .rightColumn {
   width: 25%;
   height: 100%;
+  padding: 2rem;
 }
 
 .userSection {
@@ -68,7 +70,6 @@
   flex-direction: column;
   width: 100%;
   height: 200px;
-  padding: 15px;
 }
 
 .inputContainer {
@@ -131,4 +132,25 @@
 
 .tweetTooLong {
   color: red;
+}
+
+/* TRENDS-COLUMN */
+.trendsContainer {
+  background-color: var(--bgligtherDark);
+  margin-top: 2rem;
+  padding: 2rem 1rem 1rem 1rem;
+  border-radius: 10px;
+}
+
+.trendsList {
+  list-style: none;
+}
+
+.hashtag {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.trend {
+  height: 4rem;
+  margin-bottom: 1rem;
 }
