--- a/styles/Homecomponent.module.css
+++ b/styles/Homecomponent.module.css
@@ -64,6 +64,7 @@
   font-family: "MontHeavy";
   color: white;
   border: 1px solid white;
+  cursor: pointer;
 }
 
 /* CENTER-COLUMN > TWEET SECTION */
@@ -116,6 +117,7 @@
   color: #fff;
   border: 1px solid rgb(77, 77, 77);
   outline: none;
+  cursor: pointer;
 }
 
 .tweetBtnDisabled {
